# deepseek-ocr-cli

./: .gitignore  README.md  pyproject.toml  testsetup.py
dsocr_core/dsocr/: __init__.py  __main__.py  api.py  cli.py  main.py  utils.py
ocr-cli-output/: dfe2713550e0365c53c7a75e759d154f-ocr-cli-output.md
